--- a/src/app/main/about/about.component.html
+++ b/src/app/main/about/about.component.html
@@ -1,8 +1,95 @@
-<div style="display: flex; justify-content: center; padding:20px 0;">
-  <mat-card style="width:600px">
+<div style="display: flex; justify-content: center; padding:20px 0;flex-flow:wrap;">
+  <mat-card style="width:600px;">
     <mat-card-subtitle>網站介紹</mat-card-subtitle>
     <mat-card-content *ngIf="false">本網站為私人架設，非營利、非政府民間組織，希望透過整合台灣流浪動物的資訊，讓更多人知道，社會上還有這些需要我們幫助的小動物。</mat-card-content>
-    <mat-card-content >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolore ratione voluptatem delectus at nesciunt laboriosam deserunt aspernatur hic ullam ea omnis natus tempora totam cumque veniam suscipit cum, nobis ipsam maxime? Totam temporibus reiciendis harum odio voluptatem dolorem ipsam, quos eveniet inventore illo ab earum natus facere esse neque praesentium. Voluptatem blanditiis doloremque dignissimos tenetur dolorum, ea sapiente quaerat consectetur labore aperiam aut, nulla nisi ipsam quibusdam, iusto dolore mollitia! Blanditiis consequuntur numquam maiores excepturi velit, a cum aut, repellendus necessitatibus quas, sapiente iusto corporis? Sit laudantium labore magni perspiciatis delectus. In quaerat sit incidunt inventore necessitatibus? Laudantium, non! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime obcaecati libero dolores praesentium ipsum totam cumque recusandae harum sequi repellendus modi deserunt at, corrupti natus molestias iusto aspernatur! Nostrum, libero veritatis impedit consequuntur sed iusto incidunt obcaecati repellat accusamus perferendis doloremque, quod rerum necessitatibus odit fugiat! Consequuntur officiis amet blanditiis aliquid quas deserunt tempore odio cupiditate iure, praesentium soluta, exercitationem reiciendis fugiat, animi repudiandae atque vitae facilis natus inventore voluptatum maiores! Deleniti, earum exercitationem. Consequatur aliquid accusamus optio officia at accusantium vero quae dolore iusto, saepe, reprehenderit sed aut numquam, molestiae laudantium deserunt amet. Nulla eligendi accusantium mollitia possimus reiciendis?</mat-card-content>
+    <mat-card-content>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolore ratione voluptatem delectus
+      at nesciunt laboriosam deserunt aspernatur hic ullam ea omnis natus tempora totam cumque veniam suscipit cum,
+      nobis ipsam maxime? Totam temporibus reiciendis harum odio voluptatem dolorem ipsam, quos eveniet inventore illo
+      ab earum natus facere esse neque praesentium. Voluptatem blanditiis doloremque dignissimos tenetur dolorum, ea
+      sapiente quaerat consectetur labore aperiam aut, nulla nisi ipsam quibusdam, iusto dolore mollitia! Blanditiis
+      consequuntur numquam maiores excepturi velit, a cum aut, repellendus necessitatibus quas, sapiente iusto corporis?
+      Sit laudantium labore magni perspiciatis delectus. In quaerat sit incidunt inventore necessitatibus? Laudantium,
+      non! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime obcaecati libero dolores praesentium ipsum
+      totam cumque recusandae harum sequi repellendus modi deserunt at, corrupti natus molestias iusto aspernatur!
+      Nostrum, libero veritatis impedit consequuntur sed iusto incidunt obcaecati repellat accusamus perferendis
+      doloremque, quod rerum necessitatibus odit fugiat! Consequuntur officiis amet blanditiis aliquid quas deserunt
+      tempore odio cupiditate iure, praesentium soluta, exercitationem reiciendis fugiat, animi repudiandae atque vitae
+      facilis natus inventore voluptatum maiores! Deleniti, earum exercitationem. Consequatur aliquid accusamus optio
+      officia at accusantium vero quae dolore iusto, saepe, reprehenderit sed aut numquam, molestiae laudantium deserunt
+      amet. Nulla eligendi accusantium mollitia possimus reiciendis?</mat-card-content>
+  </mat-card>
+  <!-- <mat-card style="width:600px ;margin-top:20px">
+      <div class="news">
+          <a href="/news-d?k=-MeyL4xxFQflCx1HKcuT">2021-07-19 ｜ 《看似堅強的園區，內部卻早已脆弱不堪》</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MaXEjcn1KGte5nuEYjO">2021-05-25 ｜ 【救援】雙溪16隻一個月的毛孩</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MZWbk2M8p3e6y7pzak-">2021-04-30 ｜ 手機版、電腦版線上捐款流程</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MZHaVtXk8kNQa82DXOS">2021-04-27 ｜ 【救援】106公路 極瘦又挺肚的母狗</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MR4XZGJ54fiFkhy52-o">2021-01-15 ｜ 【我又在園區待了一整天】</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MKJ7gT6JgmAbd3onQrZ">2020-10-23 ｜ 感恩節活動『小毛怪，他們並不怪』狗狗初階行為認知公益講座 報名開跑~</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MKJ4pNG5WCs_0MYt81k">2020-10-23 ｜ 【2021浪心深處，發現愛 公益桌曆及手帳開始預購】</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MHU4Zdk6MRwIPQITDWU">2020-10-05 ｜ 協會資訊DM 出爐拉</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MEM_VPLQmxTrOTmbyJJ">2020-08-10 ｜ 「浪愛發動---募車行動」</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MEMZmWcJxO5_d47VBFC">2020-08-10 ｜ 送養場地南港家樂福轉至內湖家樂福</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MD-74gmIQmZTz7TrfUm">2020-07-24 ｜ 志工心得分享</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MCR0OtK4e6nBBXJcwuR">2020-07-17 ｜ 感謝大家的關心</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MA9tHmWLtFNQpqQqzaR">2020-06-19 ｜ 祈福園區600多隻的孩子們！</a>
+      </div><div class="news">
+          <a href="/news-d?k=-MA9rh_XCvlS0mnitVvP">2020-06-19 ｜ 拜託！拜託！ 請大家為牠們集氣！！祈福園區600多隻的孩子們！</a>
+      </div><div class="news">
+          <a href="/news-d?k=-M8hqV5yy6CVkBTCL6JB">2020-06-01 ｜ 【長期志工招募中】</a>
+      </div><div class="news">
+          <a href="/news-d?k=-M6ShwFDgFjdsWPPRfpj">2020-05-15 ｜ 【愛心碼開通，讓我們一起8866 (幫幫浪浪)！！】</a>
+      </div><div class="news">
+          <a href="/news-d?k=-M3LNuu62ia2Z1cILcMV">2020-03-26 ｜ 《始終於心不忍》</a>
+      </div><div class="news">
+          <a href="/news-d?k=-M1ULEyfnwfSroFicOI3">2020-03-03 ｜ 招募狗園拍照紀錄志工達人</a>
+      </div><div class="news">
+          <a href="/news-d?k=-M0rcS5kxp_egtYsjq-_">2020-05-15 ｜ 最近狗園又缺糧了😭~</a>
+      </div><div class="news">
+          <a href="/news-d?k=-M-JAzB7FNLik0dU3uKs">2020-02-05 ｜ 送養志工們年後第一次狗園打掃記</a>
+      </div><div class="news">
+          <a href="/news-d?k=-Lt7tJZnwCx-XI6r8HwO">2019-11-08 ｜ 【陪伴張媽媽及600隻毛孩度過難關！！！】</a>
+      </div><div class="news">
+          <a href="/news-d?k=-Lt7qwTm0crBob2lNxYb">2019-11-08 ｜ 張媽媽心情非常的沈重</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LTVOvIFxI3zg0qRVfHn">2021-01-01 ｜ 「用愛幫我們找個家」勸募活動財務使用情形暨成果報告書</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LOLo1FPYvAAGfqGmCAE">2019-08-05 ｜ 特務BONY帶小狗出任務</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LIzigi743LTsEOfyNAD">2019-07-31 ｜ 我不是飢渴</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LIq12K5l-LNxLDonZAi">2019-07-31 ｜ 一直抓~一直抓</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LIk9fOu7K9OsPVMK8Lp">2019-07-31 ｜ 輕輕的擁抱~</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LIQldBx1GPKt_B75O1v">2019-07-31 ｜ 撩妹金句</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LHw9RdWyu-1FGklhN2W">2019-07-31 ｜ 喵星人沙發打坐！靜靜「凝視菩薩」：保佑我有吃不完的罐罐  </a>
+      </div><div class="news">
+          <a href="/news-d?k=-LHw5I54JcOXcuuXJwCu">2019-07-31 ｜ 🔥🔥🔥徵！！狗園打掃志工🔥🔥🔥</a>
+      </div><div class="news">
+          <a href="/news-d?k=-LHgU7uafiESKI8m6csm">2019-07-31 ｜ Lucky要幸福唷</a>
+      </div><div class="news">
+          <a href="/news-d?k=-L9eNOKudLQ-Q5FYbEKu">2019-07-31 ｜ 你有聽見他們痛徹心肺的嘶吼聲嗎？</a>
+      </div><div class="news">
+          <a href="/news-d?k=-L-nzjkN4i-PU6B5g1y4">2019-07-31 ｜ 一人一百，毛孩不餓不餓</a>
+      </div><div class="news">
+          <a href="/news-d?k=-Kq6stTWY5UKBGR-ib5Z">2019-07-31 ｜ 延續生命之火，帶牠一起回家</a>
+      </div>
+  </mat-card> -->
+  <mat-card style="width:600px ;margin-top:20px">
   </mat-card>
 
 </div>
